Configuración de Hibernate
Agregado archivo de configuración de Hibernate junto al mapeo
objeto-relacional realizado con ayuda del Reverse Engineering Wizard

--- a/Practica1Ingenieria/nbproject/project.properties
+++ b/Practica1Ingenieria/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.postgresql-9.2-1002.jdbc4.jar=C:\\Program Files\\NetBeans 8.1\\ide\\modules\\ext\\postgresql-9.2-1002.jdbc4.jar
+file.reference.postgresql-9.4.1208.jar=../postgresql-9.4.1208.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,7 +45,7 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
-    ${file.reference.postgresql-9.2-1002.jdbc4.jar}
+    ${file.reference.postgresql-9.4.1208.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -72,7 +72,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
